<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group.omarks.xeuxenroll.Student_info">

    <TextView
        android:id="@+id/textNiveau"
        android:layout_width="399dp"
        android:layout_height="43dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="94dp"
        android:textColor="#4f0238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNiveau"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/titleNiveau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="320dp"
        android:text="@string/niveau"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFiliere" />

    <TextView
        android:id="@+id/textFiliere"
        android:layout_width="399dp"
        android:layout_height="49dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="176dp"
        android:textColor="#4f0238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFiliere"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/titleFiliere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="324dp"
        android:text="@string/fili_re"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDateNaissance" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="128dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="145dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/lolo" />

    <TextView
        android:id="@+id/tittleMtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="461dp"
        android:text="@string/matricule"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tittleCarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="6dp"
        android:text="@string/carte"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textCarte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tittleMtle"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textMtle"
        android:layout_width="169dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="496dp"
        android:textColor="#4f0238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittleMtle" />

    <TextView
        android:id="@+id/textCarte"
        android:layout_width="169dp"
        android:layout_height="36dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:textColor="#4f0238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textNom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textMtle"
        app:layout_constraintTop_toBottomOf="@+id/tittleCarte" />

    <TextView
        android:id="@+id/titleNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="257dp"
        android:text="Nom et prénoms"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMtle" />

    <TextView
        android:id="@+id/textNom"
        android:layout_width="396dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="339dp"
        android:textColor="#4f0238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNom"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/titleDateNaiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="242dp"
        android:text="@string/date_de_naissance"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNom" />

    <TextView
        android:id="@+id/textDateNaissance"
        android:layout_width="401dp"
        android:layout_height="41dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="255dp"
        android:textColor="#4f0238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDateNaiss"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="12dp"
        android:text="@string/lier_la_carte"
        android:textColor="#4f0238"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNiveau" />

</androidx.constraintlayout.widget.ConstraintLayout>